--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -76,6 +76,7 @@
     background-color: rgb(90,80,80);
     border-radius: 70px;
     border: none;
+    text-decoration: none;
 
     display: flex;
     justify-content: center;
@@ -90,6 +91,10 @@
 .shop-now-button:hover{
     background-color: rgb(121, 183, 215);
     cursor: pointer;
+}
+
+.shop-now-button:focus {
+    outline: none;
 }
 
 .shop-now-button-text{
