--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    background-color: #2673b2;
+    background-color: #ffffff;
     height: 65px;
     border: solid white 1px;
     padding-left: 175px;
@@ -16,14 +16,14 @@
 }
 
 .nav-button{
-    background-color: rgb(9, 198, 239);
+    background-color: rgb(255, 255, 255);
     height: 65px;
     border: solid white 1px;
     transition: background-color 250ms;
 }
 
 .nav-button:hover{
-    background-color: #0dace5;
+    background-color: #5e5e5e;
     cursor: pointer;
 }
 
