--- a/src/Components/NavBar.css
+++ b/src/Components/NavBar.css
@@ -10,7 +10,7 @@
     position: sticky;
     top: 0;
     z-index: 100;
-    width: 100vw;
+    width: calc(100vw - (100vw - 100%));
     left: 0;
     justify-content: space-between; 
 }
