--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -7,7 +7,12 @@
     width: 100%;
     margin: 0 auto;
 }
-
+.flex-wrapper {
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
+    justify-content: space-between;
+}
 .homepage-mid {
     display: flex;
     align-items: center;
