--- a/src/Components/Footer.css
+++ b/src/Components/Footer.css
@@ -1,20 +1,17 @@
-
 .Footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-
-    bottom: 0;
     height: 200px;
-    width: 100%;
+    width: 100%; /* Use 100% instead of 100vw to respect parent width */
     align-items: center;
     background-color: #ffffff;
+    margin-top: auto; /* Push footer to the bottom if content is insufficient */
 }
 
 .footer-container-left {
     text-align: right;
     width: 100%;
     height: 100%;
-    background-color: white;
     font-family: 'Lato', sans-serif;
     padding-right: 30px;
     padding-top: 20px;
@@ -22,24 +19,20 @@
 
 .contact-data {
     font-size: 1.2em;
-    font-family: 'Lato', sans-serif;
 }
-.footer-container-right{
+
+.footer-container-right {
     display: flex;
-    flex-flow: column;
+    flex-direction: column;
     padding-bottom: 30px;
     padding-left: 30px;
     font-size: 1.2em;
-    font-family: 'Lato', sans-serif;
-
 }
 
-.social-links{
+.social-links {
     padding-top: 5px;
     font-size: 2em;
-    font-family: 'Lato', sans-serif;
     margin: 5px;
     cursor: pointer;
     letter-spacing: 10px;
 }
-
