--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -47,7 +47,7 @@
     justify-content: center;
     align-items: center;
     transition: background-color 250ms;
-    padding: 0 15px; /* Ensure padding for button content */
+    padding: 0 15px;
 }
 
 .shop-now-btn:hover {
