--- a/src/LoginPage/LoginPage.css
+++ b/src/LoginPage/LoginPage.css
@@ -36,14 +36,25 @@ input[type=text]{
 }
 
 .login-button{
-    border: 1px solid #3b9176;
-    background-color: rgb(120,200,200);
+    border:none;
+    background-color: #5588a1;
 
     width: 300px;
     height: 60px;
 
     font-size: 1.5rem;
     margin-left: 12.5%;
+
+    color: rgb(110, 255, 250);
+    font-family: Inter, sans-serif;
+    text-align: center;
+
+    transition: background-color 250ms;
+}
+
+.login-button:hover{
+    background-color: rgb(121, 183, 215);
+    cursor: pointer;
 }
 
 @media (max-width: 768px) {
