--- a/src/LoginPage/LoginPage.css
+++ b/src/LoginPage/LoginPage.css
@@ -9,7 +9,7 @@
     background-color: white;
     border: 1px solid black;
 
-    min-height: 500px;
+    min-height: 560px;
 
     grid-column: 4 / 10;
     grid-row: 1 / 8;
@@ -22,7 +22,7 @@
 .login-mid{
     display: flex;
     flex-direction: column;
-    gap: 15px;
+    gap: 20px;
 }
 
 input[type=text]{
@@ -38,6 +38,7 @@ input[type=text]{
 .login-button{
     border:none;
     background-color: #5588a1;
+    border-radius: 3px;
 
     width: 300px;
     height: 60px;
@@ -45,7 +46,7 @@ input[type=text]{
     font-size: 1.5rem;
     margin-left: 12.5%;
 
-    color: rgb(110, 255, 250);
+    color: rgb(0, 0, 0);
     font-family: Inter, sans-serif;
     text-align: center;
 
@@ -54,6 +55,28 @@ input[type=text]{
 
 .login-button:hover{
     background-color: rgb(121, 183, 215);
+    cursor: pointer;
+}
+
+.remember-checkbox{
+    padding: 2%;
+}
+
+.stock-btn-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:10px;
+
+    font-family: Inter, sans-serif;
+}
+
+.stock-login-btn{
+    height: 30px;
+    width: 250px;
+}
+
+.stock-login-btn:hover{
     cursor: pointer;
 }
 
