--- a/src/InfoPage/InfoPage.css
+++ b/src/InfoPage/InfoPage.css
@@ -1,4 +1,4 @@
-.login-top {
+.infopage-top {
     width: 100%;
     padding: 30px 10px 10px;
 
@@ -8,7 +8,7 @@
 
 }
 
-.login-mid1 {
+.infopage-mid{
     width: 100%;
     padding: 10px;
 
@@ -18,7 +18,7 @@
 
 }
 
-.login-mid2 {
+.infopage-mid2 {
     width: 100%;
     padding: 10px;
 
@@ -27,7 +27,7 @@
     border-radius: 10px;
 }
 
-.login-mid3 {
+.infopage-mid3 {
     width: 100%;
     padding: 10px;
 
