--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .Footer {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    height: 200px;
+    min-height: 20%;
     width: 100%; /* Use 100% instead of 100vw to respect parent width */
     align-items: center;
     background-color: #ffffff;
@@ -11,28 +11,26 @@
 .footer-container-left {
     text-align: right;
     width: 100%;
-    height: 100%;
+
     font-family: 'Lato', sans-serif;
     padding-right: 30px;
-    padding-top: 20px;
+
 }
 
 .contact-data {
-    font-size: 1.2em;
+    font-size: 0.8rem;
 }
 
 .footer-container-right {
     display: flex;
     flex-direction: column;
-    padding-bottom: 30px;
-    padding-left: 30px;
+
     font-size: 1.2em;
 }
 
 .social-links {
-    padding-top: 5px;
-    font-size: 2em;
+    font-size: 1rem;
     margin: 5px;
     cursor: pointer;
-    letter-spacing: 10px;
+    letter-spacing: 5px;
 }
