--- a/src/LoginPage/LoginPage.css
+++ b/src/LoginPage/LoginPage.css
@@ -25,7 +25,7 @@
     gap: 20px;
 }
 
-input[type=text]{
+.input-text-field{
     border: none;
     border-radius: 3px;
     background-color: rgb(220,220,220);
