--- a/src/SignUpPage/SignUpPage.css
+++ b/src/SignUpPage/SignUpPage.css
@@ -35,6 +35,8 @@
     text-align: center;
     border: 1px solid #ccc;
     border-radius: 3px;
+
+    background-color: rgb(220,220,220);
 }
 
 .submit-btn{
