--- a/src/Components/ShopCard/ShopCard.css
+++ b/src/Components/ShopCard/ShopCard.css
@@ -24,15 +24,20 @@
 }
 
 .shop-card-info{
-    padding-left: 5%;
     width: 40%;
     display: flex;
     flex-direction: column;
+    align-items: center;
     justify-content: center;
-    gap: 5%;
+    gap: 10%;
 
     background-color: #d7caca;
     border-radius: 3px;
+}
+
+.shop-card-name{
+    text-align: center;
+    padding: 5%;
 }
 
 .shop-card-btn{
