--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -2,9 +2,14 @@
 .homepage-mid {
     display: flex;
     align-items: center;
-    grid-column: 1 / 12;
+    grid-column: 3 / 15;
     flex-wrap: wrap; /* Allow items to wrap on smaller screens */
-    margin: 20px 0;
+    margin: 20px 0px;
+}
+
+.moto-photo{
+    display: flex;
+    flex-direction: row;
 }
 
 .moto {
@@ -28,9 +33,9 @@
 }
 
 .photo {
-    width: 50%; /* Adjust the size based on viewport */
-    max-width: 300px; /* Prevent it from growing too large */
-    height: auto; /* Maintain aspect ratio */
+    width: 40%; /* Adjust the size based on viewport */
+
+    height: auto;
     border-radius:3px;
 }
 
@@ -39,7 +44,7 @@
     width: 100%;
     max-width: 320px;
     height: 70px;
-    background-color: #5588a1;
+    background-color: #a17e55;
     border-radius:3px;
     border: none;
     text-decoration: none;
@@ -51,7 +56,7 @@
 }
 
 .shop-now-btn:hover {
-    background-color: rgb(121, 183, 215);
+    background-color: rgb(215, 174, 121);
     cursor: pointer;
 }
 
@@ -61,7 +66,7 @@
 
 .shop-now-btn {
     font-size: clamp(18px, 4vw, 40px); /* Responsive text size */
-    color: rgb(110, 255, 250);
+    color: rgb(255, 204, 110);
     font-family: Inter, sans-serif;
     text-align: center;
 }
@@ -76,7 +81,7 @@
     align-items: center;
     padding: 20px 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    grid-column: 1 / 12;
+    grid-column: 2 / 12;
     grid-row: 6/8;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 
