--- a/src/InfoPage/InfoPage.css
+++ b/src/InfoPage/InfoPage.css
@@ -1,38 +1,11 @@
-.infopage-top {
+.info-card-container{
+    display: flex;
+    flex-direction: column;
+    gap:15%;
     width: 100%;
-    padding: 30px 10px 10px;
-
-    grid-column: 2 / 9;
-    grid-row: 1 / 3;
-    border-radius: 10px;
+    height: 100%;
+    grid-column: 4/10;
+    margin-top: 10%
 
 }
 
-.infopage-mid{
-    width: 100%;
-    padding: 10px;
-
-    grid-column: 4 / 11;
-    grid-row: 3 / 5;
-    border-radius: 10px;
-
-}
-
-.infopage-mid2 {
-    width: 100%;
-    padding: 10px;
-
-    grid-column: 2 / 9;
-    grid-row: 5 / 7;
-    border-radius: 10px;
-}
-
-.infopage-mid3 {
-    width: 100%;
-    padding: 10px;
-
-    grid-column: 4 / 11;
-    grid-row: 7 / 9;
-    border-radius: 10px;
-
-}
