--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -1,10 +1,14 @@
 
 .homepage-mid {
     display: flex;
+    flex-direction: row;
     align-items: center;
-    grid-column: 3 / 15;
+    grid-column: 2 / 13;
     flex-wrap: wrap; /* Allow items to wrap on smaller screens */
     margin: 20px 0px;
+
+    width: 80%; /* Flexible width */
+    max-width: 1010px; /* Prevent it from growing too large */
 }
 
 .moto-photo{
@@ -14,8 +18,8 @@
 
 .moto {
     background-color: white;
-    width: 50%; /* Responsive width */
-    max-width: 400px; /* Prevent it from growing too large */
+    width: 45%; /* Responsive width */
+    max-width: 400px;
     height: auto; /* Adjust height based on content */
     aspect-ratio: 4 / 3; /* Maintain aspect ratio */
     border-radius: 3px;
@@ -24,7 +28,6 @@
 
 .moto-text {
     width: 90%; /* Flexible width */
-    max-width: 380px;
     height: auto; /* Adjust height dynamically */
     font-size: clamp(20px, 5vw, 45px); /* Responsive font size */
     font-family: Inter, sans-serif;
@@ -33,8 +36,8 @@
 }
 
 .photo {
-    width: 40%; /* Adjust the size based on viewport */
-
+    width: 45%; /* Adjust the size based on viewport */
+    max-width: 750px;
     height: auto;
     border-radius:3px;
 }
@@ -73,16 +76,13 @@
 
 /* Bottom Section */
 .homepage-bot {
-    width: 80%; /* Flexible width */
-    max-width: 910px; /* Prevent it from growing too large */
+    width:88%;
     background: linear-gradient(135deg, #f0f4f8, #ffffff);
     border-radius:3px;
-    display: flex;
-    align-items: center;
+    margin-top: 5%;
     padding: 20px 30px;
     box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-    grid-column: 2 / 12;
-    grid-row: 6/8;
+
     transition: transform 0.3s ease, box-shadow 0.3s ease;
 
 }
