--- a/src/Components/ShopFilter/ShopFilter.css
+++ b/src/Components/ShopFilter/ShopFilter.css
@@ -2,7 +2,7 @@
     grid-row: 1/13;
     grid-column: 1/4;
 
-    background-color: #d7caca;
+    background-color: #F6E4D9;
     width:100%;
     height: 100%;
 
