--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -1,51 +1,33 @@
 
-.homepage-mid {
+.homepage-section {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    grid-column: 2 / 13;
-    flex-wrap: wrap; /* Allow items to wrap on smaller screens */
-    margin: 20px 0px;
-
-    width: 80%; /* Flexible width */
-    max-width: 1010px; /* Prevent it from growing too large */
+    justify-content: center;
+    gap: 10%;
+    width: 100%;
+    height: 85vh;
 }
 
+.homepage-section-swiper{
+    width: 100%;
+    height: 65vh;
+}
 .moto-photo{
     display: flex;
     flex-direction: row;
 }
 
-.moto {
-    background-color: white;
-    width: 45%; /* Responsive width */
-    max-width: 400px;
-    height: auto; /* Adjust height based on content */
-    aspect-ratio: 4 / 3; /* Maintain aspect ratio */
-    border-radius: 3px;
-    justify-items: center;
-}
-
 .moto-text {
-    width: 90%; /* Flexible width */
     height: auto; /* Adjust height dynamically */
     font-size: clamp(20px, 5vw, 45px); /* Responsive font size */
     font-family: Inter, sans-serif;
-    padding-left: 15px;
-    padding-top: 30px;
-}
-
-.photo {
-    width: 45%; /* Adjust the size based on viewport */
-    max-width: 750px;
-    height: auto;
-    border-radius:3px;
 }
 
 /* Shop Now Button */
 .shop-now-btn {
+    margin-top: 5%;
     width: 100%;
-    max-width: 320px;
     height: 70px;
     background-color: #a17e55;
     border-radius:3px;
@@ -74,27 +56,9 @@
     text-align: center;
 }
 
-/* Bottom Section */
-.homepage-bot {
-    width:88%;
-    background: linear-gradient(135deg, #f0f4f8, #ffffff);
-    border-radius:3px;
-    margin-top: 5%;
-    padding: 20px 30px;
-    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-
-}
-
-.homepage-bot:hover {
-    transform: scale(1.03);
-    box-shadow: 0 6px 15px rgba(0, 0, 0, 0.2);
-}
-
 .about-us-text {
-    width: 100%;
-    font-size: clamp(14px, 3vw, 18px); /* Responsive font size */
+    width: 70%;
+    font-size: clamp(14px, 6vw, 25px); /* Responsive font size */
     font-family: 'Roboto', sans-serif;
     color: #555;
     line-height: 1.5;
