uredil shoppage dezajn

--- a/src/Components/ShopFilter/ShopFilterComponents/CheckboxForm/CheckboxForum.css
+++ b/src/Components/ShopFilter/ShopFilterComponents/CheckboxForm/CheckboxForum.css
@@ -10,7 +10,7 @@
 }
 
 .checkbox-label{
-    color: #fe696a;
+    color: #a17e55;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
 }
