--- a/src/Components/ShopFilter/ShopFilter.css
+++ b/src/Components/ShopFilter/ShopFilter.css
@@ -1,46 +1,46 @@
 .shop-filter-container{
-    grid-row: 1/13;
-    grid-column: 1/4;
-
-    background-color: #F6E4D9;
+    background: linear-gradient(white, #f1f1f1);
     width:100%;
-    height: 100%;
-    padding:0%;
+    height: 40vh;
 
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     /*box-shadow: 6px 5px 5px rgba(0.1, 0.1, 0.1, 0.1);*/
 }
 
 .title-text{
     font-family: Inter, sans-serif;
     color: #6b6262;
-    padding-bottom: 5%;
-    width: 85%;
 }
 
 .forum-submit-btn{
-
-    margin-top: 5%;
-    height: 8%;
-    width: 85%;
+    margin-top: 2%;
+    height: 13%;
+    width: 25%;
     border: none;
-    background-color: #fe696a;
+    background-color: rgb(215, 174, 121);
     color: white;
     font-family: 'Roboto', sans-serif;
     font-weight: bold;
+    border-radius: 3px;
 
     transition: all 0.3s;
 }
 
 .forum-submit-btn:hover{
-    background-color: #ff494a;
+    background-color: #a17e55;
     cursor: pointer;
 }
 
 .checkbox-container{
     display: flex;
     flex-direction: column;
-    width: 45%;
+}
+
+.filter-section{
+    display: flex;
+    flex-direction: row;
+    gap: 3%;
 }
