--- a/src/Components/ShopFilter/ShopFilterComponents/PriceRangeSelector/PriceRangeSelector.css
+++ b/src/Components/ShopFilter/ShopFilterComponents/PriceRangeSelector/PriceRangeSelector.css
@@ -1,6 +1,5 @@
 .double-slider-box {
-    background-color: #F6E4D9;
-    width: 75%;
+    width: 50%;
 }
 
 .range-slider {
@@ -15,7 +14,7 @@
 .slider-track {
     height: 100%;
     position: absolute;
-    background-color: #fe696a;
+    background-color: rgb(215, 174, 121);
     left: 0;
     right: 100%;
     border-radius: 5px;
@@ -37,7 +36,7 @@ input[type="range"]::-webkit-slider-thumb {
     width: 25px;
     border-radius: 50%;
     border: 3px solid #fff;
-    background: #fe696a;
+    background: #a17e55;
     pointer-events: auto;
     appearance: none;
     cursor: pointer;
@@ -51,7 +50,7 @@ input[type="range"]::-moz-range-thumb {
     width: 25px;
     border-radius: 50%;
     border: 3px solid #fff;
-    background: #fe696a;
+    background: #a17e55;
     pointer-events: auto;
     cursor: pointer;
     box-shadow: 0 0.125rem 0.5625rem -0.125rem rgba(0, 0, 0, 0.25);
