--- a/src/ProductPage/ProductPage.css
+++ b/src/ProductPage/ProductPage.css
@@ -1,23 +1,22 @@
 .ProductPhoto {
-    grid-column:  2/6;
-    grid-row: 1/7;
+    grid-column:  2/span 4;
+    grid-row: 2/ span 5;
     object-fit: cover;
     border-radius: 8px;
-
 }
 
 .ProductDetails{
-    grid-column:  6/12;
-    grid-row: 2/7;
+    grid-column:  6/ span 6;
+    grid-row: 2/ span 5;
     object-fit: cover;
+    padding-left: 80px;
 
 }
 
 .ProductDescriptionOpis{
     padding-top: 5px;
-    font-size: 1.8rem;
+    font-size: 1.5rem;
     font-weight: bold;
-
 }
 
 .ImeIzdelka{
@@ -39,8 +38,8 @@
     margin-top: 10px;
     padding: 10px 20px;
     font-size: 30px;
-    background-color: #007bff;
-    color: white;
+    background-color: #FF9900;
+    color: black;
     border: none;
     border-radius: 5px;
     cursor: pointer;
@@ -48,5 +47,5 @@
 }
 
 .purchase-button:hover {
-    background-color: #0056b3;
+    background-color: #CC7700;
 }
