--- a/src/Homepage/homepage.css
+++ b/src/Homepage/homepage.css
@@ -7,6 +7,8 @@
     gap: 10%;
     width: 100%;
     height: 85vh;
+
+    position: relative;
 }
 
 .homepage-section-swiper{
@@ -66,4 +68,30 @@
     margin: 0;
     text-align: left;
 }
+
+.go-top-btn{
+    background-color: black;
+    color: white;
+
+    height: 4%;
+    width: 20%;
+
+    border: none;
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+
+    position: absolute;
+    bottom: 0;
+}
+
+.go-top-btn:hover{
+    cursor: pointer;
+}
+
+.go-top-text{
+    font-weight: bold;
+    font-size: larger;
+}
+
+
 
