--- a/src/Components/CommentSection/CommentSection.css
+++ b/src/Components/CommentSection/CommentSection.css
@@ -1,41 +1,59 @@
 .comments-section{
-    grid-column: 2/span 10;
-    grid-row: 7/span 2;
     gap: 10px;
     width: 100%;
-    display: flex;
-    align-items: flex-start;
-    overflow: auto;
+
+    margin-left: 5%;
+    margin-right: 5%;
 }
 .new-comment {
+    width: 100%;
     display: flex;
-    flex-direction: column;
-    gap: 5px;
-    width: 40%;
+    flex-direction: row;
+    justify-content: flex-end;
+    height: 45px;
+    margin-bottom: 5%;
 }
 
 .new-comment-input {
-    width: 100%;
-    height: 80px;
-    padding: 10px;
     font-size: 1rem;
     border: 1px solid #ccc;
     border-radius: 5px;
     resize: none;
+    outline: none;
+    width: 20%;
+
+    transition: all 0.3s ;
+}
+
+.new-comment-input:focus {
+    background-color: #fff;
+    border: 1px solid #f5a623;
+}
+
+.new-comment-input::placeholder {
+    color: #aaa;
+    font-family: 'Roboto', sans-serif;
+    padding-top: 5%;
+    padding-left: 5%;
 }
 
 .new-comment-btn {
     padding: 10px 15px;
-    background-color: #FF9900;
-    color: black;
+    background-color: rgb(215, 174, 121);
     border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 1rem;
+
+
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: bold;
+    border-radius: 3px;
+
+    transition: all 0.3s;
 }
 
 .new-comment-btn:hover {
-    background-color: #CC7700;
+    background-color: #a17e55;
+    cursor: pointer;
 }
 .existing-comments {
     width: 100%;
