--- a/src/Pages/LoginPage/LoginPage.css
+++ b/src/Pages/LoginPage/LoginPage.css
@@ -83,22 +83,7 @@
     color: white;
 }
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-.login-mid{
+.login-core{
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -106,9 +91,6 @@
     gap: 20px;
     width: 100%;
 }
-
-
-
 
 
 .remember-checkbox{
