--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -75,3 +75,67 @@
         height: 25px;
     }
 }
+
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+
+.modal {
+    background-color: white;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    width: 60%;
+    min-width: 800px;
+}
+
+.redirect-buttons{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.close-modal {
+    background-color: #ffffff;
+    color: rgb(215, 174, 121);
+    border: none;
+    margin-left: 32px;
+    margin-bottom: 30px;
+    padding: 8px;
+    border-radius: 5px;
+    cursor: pointer;
+    float: left;
+}
+.close-modal p {
+    font-size: 1.2rem;
+}
+
+.toCheckoutPage{
+    background-color: rgb(215, 174, 121);
+    color: white;
+    border-radius: 5px;
+    padding: 12px 50px;
+    margin-right: 32px;
+    margin-bottom: 25px;
+    border: none;
+    cursor: pointer;
+    float: right;
+}
+
+.toCheckoutPage p {
+    font-size: 1.2rem;
+}
+
+.toCheckoutPage:hover {
+    background-color: #a17e55;
+}
