--- a/src/Pages/ProfilePage/ProfilePage.css
+++ b/src/Pages/ProfilePage/ProfilePage.css
@@ -37,8 +37,8 @@
 }
 
 .profile-picture {
-    width: 150px;
-    height: 150px;
+    width: 60%;
+    height: 30%;
     border-radius: 50%;
     margin-bottom: 10px;
     margin-top: 10px;
